Edited wiki page Dowloading through web user interface.

--- a/wiki/Dowloading.wiki
+++ b/wiki/Dowloading.wiki
@@ -1,7 +1,11 @@
+To download the code use:
 
-svn checkout svn+ssh://gianni@mmsids.colorado.edu/home/gianni/parsek
+ svn checkout svn+ssh://gianni@mmsids.colorado.edu/home/gianni/parsek
 
 Or to get only subsections, do the following for the code:
+
  svn checkout svn+ssh://gianni@mmsids.colorado.edu/home/gianni/parsek/Parsek2D
+
 and for the matlab files:
+
  svn checkout svn+ssh://gianni@mmsids.colorado.edu/home/gianni/parsek/matlab
