--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -12,6 +12,14 @@ The following libraries are needed: <br>
 
 -'''KVF library''', used to parse the input file for Parsek. This library is provided with the parsek source code in the directory /kvf/src/. To build this library, change to the directory /kvf/src and type ''make''.
 
+When installing these libraries, we recommend to install as root, using:
+
+ ./configure
+ make
+ sudo make install
+
+At the end the systems tells the path where the include files and the library has been installed. Make a note of it, it is needed to modify to your needs the make file.
+
 == Install Parsek ==
 
 - prepare a suitable makefile with the specific location of the KVF, HDF5, MPI include files and libraries. A template makefile is provided, but the environment variables INC_KVF, INC_HDF5, INC_MPI, LIB_KVF, LIB_HDF5, LIB_MPI must be set at the beginning of the makefile with the correct path for the KVF, HDF5, MPI include file, and libraries.
