--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -38,24 +38,6 @@ mpirun -np 2 iPIC3D GEM.inp
 '''Note that the number of processors after -np should match the number of processors defined in /processtopology/VCtopology3D.h as XLEN times YLEN times ZLEN.'''
 
 
-==Ubuntu==
-
-For kvf it needs perhaps....
-
-1) To remove from line 40 of  kvfException.h the part: 
-KVFException::
-
-2) Install: flexlexer and bison
-
-All instructions for bison and flex are in the makefile.
-
-
-Put MPI_INT instead of MPI_INTEGER in ComParticles.h
-
-Use makefile.ubuntu
-
-
-
 =Running=
 
 ==Input file==
@@ -93,7 +75,7 @@ bcPfaceXleft =  Boundary condition for particles. Same as above<br>
 bcPfaceYright = Boundary condition for particles. Same as above<br>
 bcPfaceYleft =  Boundary condition for particles. Same as above<br>
 <hr>
-Vinj = Injection velocity form the boundary
+Vinj = Injection velocity form the boundary (Under development)
 
 ==== field ====
 bcEMfaceXright = Boundary condition for Maxell's solver on X right wall. It value can be <ul>
@@ -138,7 +120,7 @@ To change the number of processors and their topology:
 # change the call to mpirun (in mpi2D.sh) specifying the right total number of processors
 # change XLEN, YLEN, ZLEN in '''VCTopology3D.h''' in the subdirectory processtopology
 
-==Submitting a iPIC3D job on VIC==
+==Submitting a iPIC3D job on VIC (KU Leuven only)==
 The VIC cluster uses the PBS system to submit jobs. To submit a job on VIC, use:
 
 # '''qsub mpi3D.nasa'''
@@ -146,7 +128,7 @@ The VIC cluster uses the PBS system to submit jobs. To submit a job on VIC, use:
 where ''mpi3D.nasa'' is a script, that includes the number of processors and time required for the simulation. A typical script file, called ''mpi3D.nasa'', can be found in the ipic3D directory.
 You need to modify the directory where your executable(iPIC3D) is, after cd, and the name of the inputfile for iPIC3D. In addition you need to choose the number of processors after -lnodes, and the time -l walltime.
 
-==Monitoring Parallel Jobs on VIC==
+==Monitoring Parallel Jobs on VIC (KU Leuven only)==
 
 # '''qstat -a''' shows the status of all the jobs you are running.
 # '''qstat -n''' shows the status of the jobs you are running. In addition to the basic information, nodes allocated to a job are listed.
